[gd_scene load_steps=2 format=3 uid="uid://bd1rm7xjfn5hv"]

[ext_resource type="Script" path="res://addons/gfred2/validation/dependency_graph_view.gd" id="1_y9k2m"]

[node name="DependencyGraphView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_y9k2m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ToolbarPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="RefreshButton" type="Button" parent="VBoxContainer/ToolbarPanel"]
layout_mode = 2
text = "Refresh"

[node name="LayoutButton" type="OptionButton" parent="VBoxContainer/ToolbarPanel"]
layout_mode = 2
text = "Tree Layout"

[node name="FilterContainer" type="HBoxContainer" parent="VBoxContainer/ToolbarPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FilterLabel" type="Label" parent="VBoxContainer/ToolbarPanel/FilterContainer"]
layout_mode = 2
text = "Filter:"

[node name="FilterLineEdit" type="LineEdit" parent="VBoxContainer/ToolbarPanel/FilterContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search dependencies..."

[node name="ShowErrorsOnly" type="CheckBox" parent="VBoxContainer/ToolbarPanel"]
layout_mode = 2
text = "Errors Only"

[node name="GraphContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="GraphViewport" type="SubViewport" parent="VBoxContainer/GraphContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="GraphCanvas" type="Control" parent="VBoxContainer/GraphContainer/GraphViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StatusBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "No dependencies"

[node name="DependencyCount" type="Label" parent="VBoxContainer/StatusBar"]
layout_mode = 2
text = "0 items"